--- a/strategy/js/index.html
+++ b/strategy/js/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="strategy.js"></script>
+    <script src="strategy_example_1.js"></script>
+    
 </head>
 <body>
-    
+    <div>
+        <select name="" id="slcOptions">
+            <option value="0">Lista</option>
+            <option value="1">Lista con detalle</option>
+            <option value="2">Lista con imagen</option>
+        </select>
+    </div>
+    <div id="content">
+
+    </div>
+
+    <script src="strategy_example_2.js"></script>
 </body>
 </html>
